--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -34,7 +34,14 @@ h2{
     font-weight: 500;
 }
 
+
 #main-header {
-    background: url('background.jpg' ) no-repeat center;
+    height: 800px;
+    background: url('IMG_5489.jpg' ) no-repeat center;
     background-size: cover;
+    color: whitesmoke;
+}
+
+#main-header .my-4 {
+    background-color:white;
 }
