--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,19 +27,19 @@
     <div class="form-inline my-6 my-lg-0">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item ">
-          <a class="nav-link" href="/">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/">Order Now</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" href="/">Menu</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/our-story">Our Story</a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link" href="/">Contact Us</a>
+          <a class="nav-link" href="/">Pick-Up</a>
+        </li>
+        <li class="nav-item ">
+          <a class="nav-link" href="/">Delivery</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/">Shop</a>
         </li>
       </ul>
     </div>
