--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,4 +49,30 @@
 <body>
 <%= yield %>
 </body>
+<nav class="navbar navbar-sticky-bottom navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="/">Xingones</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <h2 class="navbar-toggler-icon"></h2>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item ">
+        <a class="nav-link" href="/"></a>
+      </li>
+    </ul>
+    <div class="form-inline my-6 my-lg-0">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item ">
+          <a class="nav-link" href="https://www.facebook.com/profile.php?id=100013469014512&ref=br_rs">Facebook</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://www.instagram.com/xingonesoakland/">Instagram</a>
+        </li>
+        <li class="nav-item ">
+          <a class="nav-link" href="https://twitter.com/xingonesoakland?lang=en">Twitter</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 </html>
