--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,23 +25,44 @@
       </li>
     </ul>
     <div class="form-inline my-6 my-lg-0">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item ">
-          <a class="nav-link" href="/">Menu</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/our-story">Our Story</a>
-        </li>
-        <li class="nav-item ">
-          <a class="nav-link" href="/">Pick-Up</a>
-        </li>
-        <li class="nav-item ">
-          <a class="nav-link" href="/">Delivery</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/">Shop</a>
-        </li>
-      </ul>
+      <div class="d-lg-none" style="font-size: 5rem">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item ">
+            <a class="nav-link" href="/">Menu</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/our-story">Our Story</a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link" href="/">Pick-Up</a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link" href="/">Delivery</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/">Shop</a>
+          </li>
+        </ul>
+      </div>
+      <div class="d-none d-lg-block">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item ">
+            <a class="nav-link" href="/">Menu</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/our-story">Our Story</a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link" href="/">Pick-Up</a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link" href="/">Delivery</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/">Shop</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 </nav>
