--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,7 +17,7 @@
 body {
     color: #1d2d35 !important;
     font-family: "Avenir Next" !important;
-    font-size: 1.5rem;
+    font-size: 1.7rem;
     background-color: whitesmoke;
 }
 
@@ -26,7 +26,7 @@ nav {
 }
 
 p {
-    font-size: 1.5rem;
+    font-size: 1.7rem;
 }
 
 h1 {
@@ -35,9 +35,15 @@ h1 {
 }
 
 h2{
-    font-size: 3rem !important;
+    font-size: 4rem !important;
     font-weight: 500;
 }
+
+h3 {
+    font-size: 3rem !important;
+    font-weight: 400;
+}
+
 
 #red-link a:link {
     color: whitesmoke;
