updated card style

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta name="Description" content="Xingones: fried chicken, tacos, fries">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sofa</title>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
