updated header and html lang description

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="Description" content="Xingones: fried chicken, tacos, fries">
   <title>Sofa</title>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
