--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,7 +36,7 @@ h1 {
 
 h2{
     font-size: 4rem !important;
-    font-weight: 500;
+    font-weight: 600;
 }
 
 h3 {
@@ -44,6 +44,11 @@ h3 {
     font-weight: 400;
 }
 
+h4 {
+    padding-top: -15px;
+    font-size: 2.3rem !important;
+    font-weight: 200;
+}
 
 #red-link a:link {
     color: whitesmoke;
@@ -65,6 +70,11 @@ h3 {
 #about-image {
     background: url('IMG_5550.jpg' ) no-repeat center;
     background-size: cover;
+}
+
+#sub-header {
+    color: #dc3545;
+
 }
 
 .navbar-sticky-bottom {
