--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,9 @@
 </head>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">Xingones</a>
+  <a class="navbar-brand" href="/">
+    <%= image_tag('Xingones_vector.jpg', width: '90px') %>
+  </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <h2 class="navbar-toggler-icon"></h2>
   </button>
@@ -72,8 +74,9 @@
 <%= yield %>
 </body>
 <nav class="navbar navbar-sticky-bottom navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">Xingones</a>
-
+  <a class="navbar-brand" href="/">
+    <%= image_tag('Xingones.jpg', width: '175px') %>
+  </a>
     <ul class="navbar-nav mr-auto">
       <li class="nav-item ">
         <a class="nav-link" href="/"></a>
