--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -58,7 +58,7 @@ h4 {
 #main-header {
     margin-top: -15px;
     height: 800px;
-    background: url('IMG_5489.jpg' ) no-repeat center;
+    background: url('IMG_5489-2.jpeg' ) no-repeat center;
     background-size: cover;
     color: whitesmoke;
 }
@@ -68,7 +68,7 @@ h4 {
 }
 
 #about-image {
-    background: url('IMG_5550.jpg' ) no-repeat center;
+    background: url('IMG_5550-2.jpeg' ) no-repeat center;
     background-size: cover;
 }
 
