--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -57,7 +57,8 @@ h4 {
 
 #main-header {
     margin-top: -15px;
-    height: 800px;
+    min-height: 800px;
+    width: auto;
     background: url('IMG_5489-2.jpeg' ) no-repeat center;
     background-size: cover;
     color: whitesmoke;
