--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 </head>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">Xingones</a>
+  <%= link_to image_tag("motif_xingones-03.jpg", height: "auto", width: '75px', :style => 'margin-top: -15px') %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <h2 class="navbar-toggler-icon"></h2>
   </button>
@@ -42,6 +42,9 @@
               <a class="nav-link" href="<%= page.slug %>"><%=  page.label %></a>
             </li>
           <% end %>
+          <li class="nav-item">
+            <%= image_tag("motif_xingones-04.jpg", width: '50px') %>
+          </li>
         </ul>
       </div>
     </div>
