--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,23 +60,17 @@
 <%= yield %>
 </body>
 <nav class="navbar navbar-sticky-bottom navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">Xingones</a>
 
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item ">
-        <a class="nav-link" href="/"></a>
-      </li>
-    </ul>
-    <div class="form-inline my-6 my-lg-0">
+    <div class="form-inline mx-auto">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item ">
-          <a class="nav-link" href="https://www.facebook.com/profile.php?id=100013469014512&ref=br_rs">Facebook</a>
+          <a class="nav-link green" href="https://www.facebook.com/profile.php?id=100013469014512&ref=br_rs">Facebook</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://www.instagram.com/xingonesoakland/">Instagram</a>
+          <a class="nav-link green" href="https://www.instagram.com/xingonesoakland/">Instagram</a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link" href="https://twitter.com/xingonesoakland?lang=en">Twitter</a>
+          <a class="nav-link green" href="https://twitter.com/xingonesoakland?lang=en">Twitter</a>
         </li>
       </ul>
     </div>
