updated single page header css

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -83,6 +83,13 @@ h4 {
 
 }
 
+.single-page-header {
+    font-size: 8rem !important;
+    font-weight: 800;
+    font-family:  "Roboto Condensed", "Roboto", "Avenir", "Helvetica Neue", Sans-Serif !important;
+    color: #ee3e2c;
+}
+
 .navbar-sticky-bottom {
     margin-top: 50px;
 }
