--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -222,9 +222,9 @@ h4 {
 
 .background li:nth-child(0) {
     left: 42%;
-    width: 184px;
-    height: 184px;
-    bottom: -184px;
+    height:45px;
+    width:90px;
+    border-radius: 0 0 90px 90px;
     animation-delay: 1s;
 }
 .background li:nth-child(1) {
