--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -185,15 +185,18 @@ h4 {
 
 @keyframes animate {
     0%{
-        transform: translateY(-1000px) rotate(720deg);
+        transform: translateY(-250px) rotate(720deg);
+        opacity: 0;
+
+    }
+    50%{
+        transform: translateY(0) rotate(540deg);
         opacity: 1;
-        border-radius: 0;
 
     }
     100%{
-        transform: translateY(0) rotate(0deg);
+        transform: translateY(250px) rotate(360deg);
         opacity: 0;
-        border-radius: 50%;
     }
 }
 
@@ -208,13 +211,13 @@ h4 {
     background: transparent;
 }
 .background li {
-    position: absolute;
+    position: relative;
     display: block;
     list-style: none;
     width: 20px;
     height: 20px;
-    background: rgba(255, 255, 255, 0.2);
-    animation: animate 19s linear infinite;
+    background-image: url("web_xingones-03.svg") ;
+    animation: animate 14s linear infinite;
 }
 
 
@@ -222,85 +225,94 @@ h4 {
 
 .background li:nth-child(0) {
     left: 42%;
+    height:90px;
+    width:180px;
+    border-radius: 0 0 90px 90px;
+    opacity: 0;
+}
+.background li:nth-child(1) {
+    left: 57%;
+    height:45px;
+    width:90px;
+    border-radius: 0 0 90px 90px;
+    opacity: 0;
+}
+.background li:nth-child(2) {
+    left: 3%;
+    height:90px;
+    width:180px;
+    border-radius: 0 0 90px 90px;
+    opacity: 0;
+}
+.background li:nth-child(3) {
+    left: 16%;
     height:45px;
     width:90px;
     border-radius: 0 0 90px 90px;
     animation-delay: 1s;
-}
-.background li:nth-child(1) {
-    left: 57%;
-    width: 139px;
-    height: 139px;
-    bottom: -139px;
-    animation-delay: 1s;
-}
-.background li:nth-child(2) {
-    left: 3%;
-    width: 117px;
-    height: 117px;
-    bottom: -117px;
-    animation-delay: 1s;
-}
-.background li:nth-child(3) {
-    left: 16%;
-    width: 184px;
-    height: 184px;
-    bottom: -184px;
-    animation-delay: 2s;
+    opacity: 0;
 }
 .background li:nth-child(4) {
     left: 71%;
-    width: 104px;
-    height: 104px;
-    bottom: -104px;
-    animation-delay: 10s;
+    height:90px;
+    width:180px;
+    border-radius: 0 0 90px 90px;
+    animation-delay: 5s;
+    opacity: 0;
 }
 .background li:nth-child(5) {
     left: 71%;
-    width: 162px;
-    height: 162px;
-    bottom: -162px;
-    animation-delay: 15s;
+    height:45px;
+    width:90px;
+    border-radius: 0 0 90px 90px;
+    animation-delay: 7s;
+    opacity: 0;
 }
 .background li:nth-child(6) {
     left: 29%;
-    width: 153px;
-    height: 153px;
-    bottom: -153px;
-    animation-delay: 25s;
+    height:90px;
+    width:180px;
+    border-radius: 0 0 90px 90px;
+    animation-delay: 15s;
+    opacity: 0;
 }
 .background li:nth-child(7) {
     left: 24%;
-    width: 117px;
-    height: 117px;
-    bottom: -117px;
-    animation-delay: 19s;
+    height:45px;
+    width:90px;
+    border-radius: 0 0 90px 90px;
+    animation-delay: 10s;
+    opacity: 0;
 }
 .background li:nth-child(8) {
     left: 50%;
-    width: 190px;
-    height: 190px;
-    bottom: -190px;
-    animation-delay: 38s;
+    height:90px;
+    width:180px;
+    border-radius: 0 0 90px 90px;
+    animation-delay: 20s;
+    opacity: 0;
 }
 .background li:nth-child(9) {
     left: 50%;
-    width: 153px;
-    height: 153px;
-    bottom: -153px;
+    height:45px;
+    width:90px;
+    border-radius: 0 0 90px 90px;
     animation-delay: 13s;
+    opacity: 0;
 }
 .background li:nth-child(10) {
     left: 47%;
-    width: 156px;
-    height: 156px;
-    bottom: -156px;
-    animation-delay: 42s;
+    height:90px;
+    width:180px;
+    border-radius: 0 0 90px 90px;
+    animation-delay: 30s;
+    opacity: 0;
 }
 .background li:nth-child(11) {
     left: 40%;
-    width: 137px;
-    height: 137px;
-    bottom: -137px;
+    height:45px;
+    width:90px;
+    border-radius: 0 0 90px 90px;
     animation-delay: 25s;
+    opacity: 0;
 }
